# ecommerce-platform

./: .env.example  .eslintrc.mjs  .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json  vitest.config.ts
.github/workflows/: ci.yml
apps/ecommerce-admin/: README.md  _proxy.ts  auth.ts  components.json  instrumentation.ts  next.config.ts  package.json  pnpm-lock.yaml  vitest.config.mts
apps/ecommerce-frontend/: README.md  drizzle.config.ts  instrumentation.ts  next.config.ts  package.json  pnpm-lock.yaml
docs/: admin-flow.md  flow.md  irregularites.md
docs/api-reference/: cart.md  catalog.md  gateway.md  iam.md  inventory.md  orders.md  other.md  payments.md
docs/decisions/: 0001-event-store-design.md
docs/detail/: hybrid-recommendation-reranking.md
services/analytics-svc/: .env.example  drizzle.config.ts  package.json
services/assistant-svc/: package.json
services/cart-svc/: .env.example  Dockerfile  package.json
services/catalog-svc/: .env.example  Dockerfile  drizzle.config.ts  package.json
services/fulfillment-svc/: .env.example  Dockerfile  README.md  drizzle.config.ts  (+1 more)
services/ml-svc/: README.md  pyproject.toml
services/ml-svc/src/ml_svc/: config.py  main.py
services/ml-svc/src/ml_svc/api/: churn.py  forecast.py  recommendation.py
services/ml-svc/src/ml_svc/schemas/: churn.py  forecast.py  recommendation.py
services/ml-svc/src/ml_svc/services/: churn.py  forecasting.py  recommendation.py
services/ml-svc/tests/: test_api.py  test_churn.py  test_forecasting.py  test_recommendation.py
(+349 files in other folders)
